Bug 283697 - Firefox Options (Preferences) panels are cropped (cut off). r=mconnor
UltraBlame original commit: 625d53b91e2ea55397a751d536e933f53be89081

--- a/browser/themes/winstripe/browser/preferences/preferences.css
+++ b/browser/themes/winstripe/browser/preferences/preferences.css
@@ -268,5 +268,5 @@ filefield[disabled="true"] .fileFieldIcon {
 
 
 .bottomBox {
-  padding-bottom: 2px;
+  padding-bottom: 4px;
 }
